# metaldf

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benchmarks/: data.py  run.py
docs/: FEATURE_GAP.md
rust/: Cargo.toml  build.rs
rust/metal/common/: 01_types.h  02_reduce_ops.h  03_debug.h  04_null_mask.h
rust/metal/datetime/: 01_calendar.h  extract.metal
rust/metal/elementwise/: 01_types.h  02_ops.h  binary.metal  comparison.metal  fillna.metal  logical.metal  shift.metal  unary.metal
rust/metal/expression/: 01_opcodes.h  eval.metal  eval_reduce.metal
rust/metal/filter/: compact.metal
rust/metal/groupby/: 01_types.h  02_accumulators.h  hash.metal  sort_agg.metal
rust/metal/join/: 01_types.h  hash_join.metal
rust/metal/reduction/: reduce.metal
rust/metal/rolling/: rolling.metal
rust/metal/scan/: fill_scan.metal  scan.metal
rust/metal/sort/: bitonic.metal  gather.metal  radix.metal
rust/metal/strings/: 01_types.h  classify.metal  compare.metal  groupby.metal  intrinsic.metal  manipulate.metal  search.metal  sort.metal  transform.metal
rust/metal/test/: test_debug.metal
rust/src/: backend.rs  buffer.rs  column.rs  column_view.rs  lib.rs  series.rs
rust/src/kernels/: codegen.rs  comparison.rs  datetime.rs  elementwise.rs  expression.rs  fill_scan.rs  fillna.rs  filter.rs  groupby.rs  join.rs  mod.rs  reductions.rs  rolling.rs  scan.rs  shift.rs  sort.rs  strings.rs
rust/tests/: test_backend.rs  test_batch.rs  test_buffer.rs  test_column.rs  test_metallib.rs  test_series_strings.rs
tests/: conftest.py  test_accelerator.py  test_cli.py  (+56 more)
(+15 files in other folders)
