[build-system]
requires = ["hatchling", "maturin>=1.0,<2.0"]
build-backend = "hatchling.build"

[project]
name = "metaldf"
version = "0.1.0"
description = "GPU-accelerated DataFrame library for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
parquet = ["pyarrow>=12.0"]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
metaldf = "metaldf.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/metaldf"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D401", "D403"]

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "metaldf_engine"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [".venv"]
